[tool.poetry]
name = "bottle-argsmap"
version = "0.1.0"
description = ""
authors = ["Cologler <skyoflw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
bottle = "^0.12.19"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
WebTest = "^2.0.35"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
